Fixes broken tests, adds more tests

--- a/test/examples/all_data.org
+++ b/test/examples/all_data.org
@@ -5,14 +5,14 @@ This is the document text
   CLOCK: [2015-11-21 Sat 15:29]
   CLOCK: [2015-11-21 Sat 14:43]--[2015-11-21 Sat 15:29] =>  0:46
 
-  Some text inside the node
+  Some text inside the node 1
 ** DONE [#B] Child node 1                                           :development:
   SCHEDULED: <2015-11-21 Sat> DEADLINE: <2015-11-21 Sat>
   CLOCK: [2015-11-21 Sat 14:43]--[2015-11-21 Sat 14:43] =>  0:00
 
-  Some text inside the node
+  Some text inside the node 2
 *** DONE [#C] Child node 2                                      :development:
   SCHEDULED: <2015-11-21 Sat> DEADLINE: <2015-11-21 Sat>
   CLOCK: [2015-11-21 Sat 14:43]--[2015-11-21 Sat 14:43] =>  0:00
 
-  Some text inside the node
+  Some text inside the node 3
