--- a/test/examples/90_sections_multi_clocks_tree.org
+++ b/test/examples/90_sections_multi_clocks_tree.org
@@ -51,6 +51,7 @@
    CLOCK: [2015-10-14 Wed 10:57]--[2015-10-14 Wed 11:01] =>  0:04
    CLOCK: [2015-10-14 Wed 08:00]--[2015-10-14 Wed 08:20] =>  0:20
 ** TODO Something 3                                              :intern_dev:
+   CLOCK: [2015-11-18 Wed 08:04]--[2015-11-18 Wed 09:04] =>  1:00
 ** TODO Something 4                                                     :org:
 *** DONE Something 5                                                :meeting:
    CLOSED: [2015-11-18 Wed 09:04]
@@ -274,6 +275,7 @@
    CLOCK: [2015-10-14 Wed 10:57]--[2015-10-14 Wed 11:01] =>  0:04
    CLOCK: [2015-10-14 Wed 08:00]--[2015-10-14 Wed 08:20] =>  0:20
 ** TODO Something 3                                              :intern_dev:
+   CLOCK: [2015-11-18 Wed 08:04]--[2015-11-18 Wed 09:04] =>  1:00
 ** TODO Something 4                                                     :org:
 *** DONE Something 5                                                :meeting:
    CLOSED: [2015-11-18 Wed 09:04]
